<resources>
    <string name="app_name">乆安智慧</string>
    <string name="title_txt">乆安智慧</string>
    <string name="title_right_txt_history">历史文件</string>
    <string name="title_right_txt">历史上传图片</string>
    <string name="no_net">当前无网络，请检查网络设置</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="update">更新</string>
    <string name="updating">更新中…</string>
    <string name="intxt">请输入用户名</string>
    <string name="initxtpwd">6–16位字母/数字</string>
    <string name="btn_login">登录</string>
    <string name="login_in">登录中…</string>
    <string name="register_in">注册中…</string>
    <string name="inupdate">加载中…</string>
    <string name="delecting">删除中…</string>
    <string name="text_num_five">5</string>
    <string name="success">打卡成功</string>
    <string name="success_submit">提交成功</string>
    <string name="submit">提交</string>
    <string name="submit_in">提交中…</string>
    <string name="error">提交失败</string>
    <string name="btn_again_out">再按一次退出程序</string>
    <string name="tv_txt_photo">头像</string>
    <string name="tv_txt_phone">手机号</string>
    <string name="tv_name">姓名</string>
    <string name="tv_time">登录时间</string>
    <string name="tv_changepwd">修改密码</string>
    <string name="tv_app_detaicl">软件详情</string>
    <string name="out_login">退出登录</string>
    <string name="home_text_company">乆安™智慧云平台</string>
    <string name="patrolckock_title">巡检打卡</string>
    <string name="hiddentroublereport_title">隐患上报</string>
    <string name="rectificationdocument_title">消防整改</string>
    <string name="style_patroclckock_sigin">打卡</string>
    <string name="style_hint_memo_sign">请填写签到备注</string>
    <string name="style_sign_address">打卡地点：</string>
    <string name="style_sign_time">打卡时间：</string>
    <string name="no_photo_perssion">未给相机权限，无法使用该功能</string>
    <string name="open_gps">未开启GPS,请开启</string>
    <string name="wait_letter">请过一会再点击</string>
    <string name="no_read_permission">为允许影响软件使用</string>
    <string name="update_fail">网页加载失败</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo">相册</string>
    <string name="empty_username">账号为空,请输入</string>
    <string name="empty_userpwd">密码为空,请输入</string>
    <string name="login_again">获取用户信息失败，请重新登陆</string>
    <string name="location_again">请重新定位</string>
    <string name="txt_signin">打卡中…</string>
    <string name="trouble_des">请填写隐患描述</string>
    <string name="tv_title_des">正文标题：</string>
    <string name="tv_title_fangan">整改方案：</string>
    <string name="your_idea">请填写您宝贵的意见!</string>
    <string name="title_zhenggai">整改公文</string>
    <string name="empty_title">暂无更多公文了</string>
    <string name="title_decumentmanage">消防资质文件上传</string>
    <string name="update_decument">资质文件上传</string>
    <string name="history_delect">图片已满（可到历史文件删除再上传）</string>
    <string name="app_login_name">消防预警云平台</string>
    <string name="update_again">重新加载…</string>
    <string name="updata_first">updata</string>
    <string name="update_again_two">again</string>
    <string name="select_photos">请选择图片在上传</string>
    <string name="select_type">选择隐患类型</string>
    <string name="trouble_des_txt">隐患描述:</string>
    <string name="trouble_auto">隐患语音:</string>
    <string name="trouble_person">巡检人员:</string>
    <string name="old_pwd">旧密码：</string>
    <string name="old_pwd_6_16">6–16个字符，区分大小写</string>
    <string name="new_pwd">新密码：</string>
    <string name="new_pwd_6_16">6–16个字符，区分大小写</string>
    <string name="show_pwd">显示密码</string>
    <string name="change_pwd">修改密码</string>
    <string name="version_about">版本介绍</string>
    <string name="about_app_version">消防企业端   版本：v</string>
    <string name="old_pwd_six">旧密码长度不能小于6或大于16</string>
    <string name="new_pwd_six">新密码长度不能小于6或大于16</string>
    <string name="is_newest_version">当前版本已经是最新版本</string>
    <string name="app_updata_nam">乆安智慧有更新了</string>
    <string name="onclick_again">请勿重复点击</string>
    <string name="no_update_des">暂无更新内容</string>
    <string name="update_des">更新内容：</string>
    <string name="service_error">服务器出错,请稍后再试</string>

    <string name="netdevice_url_unit">联网企业</string>
    <string name="netdevice_url">联网设备</string>
    <string name="firealarm_url">报警设备</string>
    <string name="deviceorder_url">故障设备</string>

    <string name="netdevice_url_a">消防监控</string>
    <string name="netdevice_url_online">联网资源</string>
    <string name="netdevice_url_trouble">故障资源</string>

    <string name="common_activity_zz">资质管理</string>
    <string name="common_activity_mouth">月度等级</string>
    <string name="common_activity_year">年度等级</string>

    <string name="common_activity_personnal">值班人员</string>
    <string name="common_activity_fire">安全巡检</string>

    <string name="common_activity_msg">消防通知</string>
    <string name="common_activity_zhegai">消防整改</string>
    <string name="onclick_again_back">再按一次退出当前界面</string>
    <string name="user_type_name">请选择角色</string>

    <string name="user_type_name_login_supevice">监管部门</string>
    <string name="user_type_name_login_unit">联网单位</string>

    <string name="year_grade">年度等级</string>
    <string name="mouth_grade">月度等级</string>
    <string name="mouth_trend">月度趋势</string>
    <string name="msg_decument">通知公文</string>
    <string name="change_decument">整改公文</string>
    <string name="msg_list">通知列表</string>
    <string name="change_list">整改列表</string>
    <string name="iscome_back_login">是否退出登录？</string>
    <string name="no_trouble_type">暂无隐患类型</string>
    <string name="activity_mine">我的</string>
    <string name="login_fairl">登录失败，请重试</string>
    <string name="trouble_video">隐患视频:</string>
    <string name="trouble_photo">隐患图片:</string>

    <string name="default_file_name">MyRecording</string>
    <string name="datas_error_again">数据异常，请重新登录</string>
    <string name="video_dispose">视频处理中...</string>
    <string name="video_format">视频g格式错误</string>
    <string name="video_lenght_3m">视频大于3M,请重选</string>
    <string name="action_settings">Settings</string>

    <string name="onclick_again_load">点击重新加载</string>
    <string name="no_datas">暂无数据</string>
    <string name="jiuan_xiaofng">久安消防</string>

    <item name="real_position" type="id"/>

    <string name="homt_equipment">联网设备</string>
    <string name="homt_callpolice">设备报警</string>
    <string name="homt_malfunction">故障设备</string>

    <string name="record_fail">录音失败</string>
    <string name="time_too_short">时间太短，请重新录音</string>
    <string name="play_over">播放完成</string>
    <string name="play_error">抱歉，播放发生异常</string>
    <string name="stop_by_up">松开停止录音</string>
    <string name="speak_by_press">按住说话</string>
    <string name="start_record">开始录音</string>
    <string name="stop_record">停止录音</string>

</resources>
