<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/view_1px"/>

    <include layout="@layout/title_bar_mvp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/old_pwd"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/et_oldPwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="@string/old_pwd_6_16"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingStart="15dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_pwd"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/et_newPwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="@string/new_pwd_6_16"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_change"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="15.0sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp">

        <CheckBox
            android:id="@+id/chk_showPwd"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_button_select_default"
            android:button="@null"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/show_pwd"
            android:textColor="@color/gray"
            android:layout_marginStart="10dp"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

</LinearLayout>