<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/btn_take_photo"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <View style="@style/horizontal_line"/>

    <TextView
        android:id="@+id/btn_from_gallery"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/select_photo"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/btn_Pop_exit"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="16sp"/>

</LinearLayout>