<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <com.baidu.mapapi.map.MapView
                    android:id="@+id/bmapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/btn_dingwei"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_signin_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/style_sign_time"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_signin_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_location_disabled"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/style_sign_address"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry"/>

                <TextView
                    android:id="@+id/tv_signin_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>

            </LinearLayout>

            <View style="@style/horizontal_gray_10"/>

            <EditText
                android:id="@+id/et_signin_memo"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:gravity="left"
                android:hint="@string/style_hint_memo_sign"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>

            <View style="@style/horizontal_line"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                style="@style/mygrideview_style"/>

            <View
                style="@style/horizontal_gray_10"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_upload_signin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/sigin_unit"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_signin_count"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_upload_infos"
        style="@style/upload_style"/>

</LinearLayout>